syntax="proto3";
package services;
option go_package = "./;pb";

message TaskModel{
  //@inject_tag: json:"id" form:"id"
  uint64 Id = 1;
  //@inject_tag: json:"uid" form:"uid"
  uint64 Uid = 2;
  //@inject_tag: json:"title" form:"title"
  string Title = 3;
  //@inject_tag: json:"content" form:"content"
  string Content = 4;
  //@inject_tag: json:"start_time" form:"start_time"
  int64 StartTime = 5;
  //@inject_tag: json:"end_time" form:"end_time"
  int64 EndTime = 6;
  //@inject_tag: json:"status" form:"status"
  int64 Status = 7;
  //@inject_tag: json:"create_time" form:"create_time"
  int64 CreateTime = 8;
  //@inject_tag: json:"update_time" form:"update_time"
  int64 UpdateTime = 9;
}

message TaskRequest{
    //@inject_tag: json:"id" form:"id"
    uint64 Id = 1;
    //@inject_tag: json:"uid" form:"uid"
    uint64 Uid = 2;
    //@inject_tag: json:"title" form:"title"
    string Title = 3;
    //@inject_tag: json:"content" form:"content"
    string Content = 4;
    //@inject_tag: json:"start_time" form:"start_time"
    int64 StartTime = 5;
    //@inject_tag: json:"end_time" form:"end_time"
    int64 EndTime = 6;
    //@inject_tag: json:"status" form:"status"
    int64 Status = 7;
    // @inject_tag: json:"start" form:"start" uri:"start"
    uint32 Start = 8;
    // @inject_tag: json:"limit" form:"limit" uri:"limit"
    uint32 Limit = 9;
}

message TaskListResponse{
  // @inject_tag: json:"task_list"
  repeated TaskModel TaskList=1;
  // @inject_tag: json:"count"
  uint32 Count=2;
  // @inject_tag: json:"code"
  uint32 Code=3;
}

message TaskDetailResponse{
  // @inject_tag: json:"task_detail" form:"task_detail"
  TaskModel TaskDetail=1;
}

service TaskService{
  rpc CreateTask(TaskRequest) returns(TaskDetailResponse);
  rpc GetTasksList(TaskRequest) returns(TaskListResponse);
  rpc GetTask(TaskRequest) returns(TaskDetailResponse);
  rpc UpdateTask(TaskRequest) returns(TaskDetailResponse);
  rpc DeleteTask(TaskRequest) returns(TaskDetailResponse);
}